Fixed bug where minecraft_backup would not be able to stop the server when upgrading server version